Fixed right banner spacing

--- a/css/home.css
+++ b/css/home.css
@@ -28,10 +28,7 @@ body {
 
 .HomeBanner h2 {
 	font-size: 32px;
-	padding: 20px 0;
-}
-.HomeBanner p {
-	padding-bottom: 10px;
+	padding: 0px 0;
 }
 
 
@@ -46,7 +43,7 @@ body {
 		display: inline-block;
 		width: 45%;
     color: white;
-		padding: 0 0 0 0%;
+		padding: 0;
 }
 
 .BannerRight {
@@ -54,8 +51,8 @@ body {
 		vertical-align: top;
 		width: 50%;
     color: white;
-		padding: 0 0 0 100px;
-		margin: 0 0 0 5px;
+		padding: 0 0 0 80px;
+		margin: 0 0 0 0px;
 }
 
 .BannerRight a {
@@ -88,7 +85,11 @@ body {
   padding: .5em 0 0.1em;
 }
 
-
+@media (max-width:1080px) {
+	.BannerRight	{
+		padding: 0 0 0 120px;
+	}
+}
 @media (max-width:950px) {
 
 	.HomeBanner{
